# gpf

./: .bumpversion.cfg  .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .project  .pydevproject  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.production  Dockerfile.seqpipe  GEMINI.md  GetParams.py  Jenkinsfile  Jenkinsfile.nightly  Jenkinsfile.release  MakeBedFromRequests.py  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  VERSION  Vagrantfile  _Jenkinsfile  annotate_doc.html  build.sh  build_cleanup.sh  build_docs.sh  build_setup.sh  build_tests.sh  call.py  changes.rst  conda-environment.yml  coverage.sh  coveragerc  create_docker_network.sh  depconvert.sh  dev-environment.yml  (+62 more)
core/: .gitattributes  Dockerfile  pyproject.toml  setup.cfg  setup.py
core/conda-recipe/: recipe.yaml
core/demo_scripts/: working_reference_genome.py
core/gpf/: __init__.py
core/gpf/common_reports/: common_report.py  denovo_report.py  family_counter.py  people_counter.py
core/gpf/configuration/: gpf_config_parser.py  gpf_instance_config.py  utils.py
core/gpf/duckdb_storage/: duckdb2_variants.py  duckdb_genotype_storage.py  duckdb_import_storage.py  duckdb_legacy_genotype_storage.py  duckdb_storage_helpers.py  duckdb_variants.py
core/gpf/enrichment_tool/: base_enrichment_background.py  build_ur_synonymous_enrichment_background.py  enrichment_cache_builder.py  enrichment_utils.py  event_counters.py  gene_weights_background.py  genotype_helper.py  samocha_background.py
core/gpf/gene_profile/: convert_gene_profile_to_duckdb.py  db.py  exporter.py  generate_gene_profile.py  statistic.py
core/gpf/gene_sets/: denovo_gene_set_collection.py  denovo_gene_set_helpers.py  denovo_gene_sets_config.py  denovo_gene_sets_db.py
core/gpf/genomic_scores/: scores.py
core/gpf/genotype_storage/: genotype_storage_genomic_context_cli.py
core/gpf/gpf_instance/: __init__.py  gpf_instance.py
core/gpf/gpf_instance_plugin/: gpf_instance_context_plugin.py
core/gpf/import_tools/: cli.py  import_config.py  import_tools.py
core/gpf/inmemory_storage/: annotation_serialization.py  inmemory_genotype_storage.py  raw_variants.py
core/gpf/parquet/: parquet_writer.py
core/gpf/parquet_storage/: storage.py
core/gpf/pedigrees/: drawing.py  families_data.py  family.py  family_role_builder.py  layout.py  loader.py
core/gpf/person_filters/: __init__.py  person_filters.py
core/gpf/person_sets/: __init__.py  person_sets.py
core/gpf/pheno/: db.py  (+8 more)
core/tests/: conftest.py  schema2_parquet_storage.yaml
dae/: .gitignore  README.md  conftest.py  pytest.ini  setup.cfg  setup.py
dae/annotation/: annotation_makefile_generator.py  annotation_pipeline.py
dae/common/: config.py  progress.py  query_base.py
dae/common_reports/: common_report.py
dae/configurable_entities/: configurable_entity_config.py
dae/dae/: DAE.py  GeneModelFiles.py  GenomeAccess.py  GenomesDB.py  RegionOperations.py  __init__.py  __version__.py  _version.py  conftest.py  genomes_config_parser.py  genomes_db_config_parser.py  parquet_variants.py  person_filters.py  person_sets.py
dae/demo_scripts/: working_reference_genome.py
dae/docs/: configuration.rst  genomic_resources.rst  index.rst  variants.rst
dae/enrichment_tool/: background.py  event_counters.py
dae/gene/: denovo_gene_set_collection_config.py  scores.py
dae/pedigrees/: interval_sandwich.py  pedigrees.py
dae/pheno/: common.py
dae/studies/: dataset.py  factory.py  genotype_browser_config.py  people_group_config.py  study.py  study_config.py
dae/tests/: alla_import.py  conftest.py  foobar_import.py
dae/tools/: annotate_variant.py  export_histograms.py  family_pedigree_generator.py  vcf2parquet.py
dae/variant_annotation/: Experiments.ipynb  annotation_request.py
federation/: Dockerfile  Dockerfile.runner  Jenkinsfile.integration  docker-compose-integration.yaml  docker-compose-jenkins.yaml  docker-compose.yaml  federation-environment.yml  mypy.ini  pyproject.toml  setup.cfg  setup.py  setup_testing_remote.py  testing_entrypoint.sh  versioneer.py
federation/conda-recipe/: recipe.yaml
federation/federation/: denovo_gene_sets_db.py  gene_sets_db.py  remote_common_reports_helper.py  remote_enrichment_builder.py  remote_enrichment_tool.py  remote_extension.py  remote_pheno_browser_helper.py  remote_pheno_tool_adapter.py  remote_phenotype_data.py  remote_study.py  remote_study_wrapper.py  remote_utils.py  remote_variant.py  rest_api_client.py  utils.py
federation/jenkins-jobs/: integration.groovy
federation/tests/: conftest.py  test_federation_django.py  test_remote_extension.py  test_remote_gene_sets.py  test_remote_pheno_db.py  test_remote_phenotype_data.py  test_remote_study_wrapper.py  test_remote_variant.py  test_rest_api_client.py
gcp_storage/: Dockerfile  pyproject.toml  setup.cfg  setup.py  versioneer.py
gcp_storage/gcp_storage/: bigquery_query_runner.py  bigquery_variants.py  conftest.py  gcp_genotype_storage.py  gcp_import_storage.py  import.sh
impala_storage/: Dockerfile  docker-compose.yaml  environment.yml  impala-environment.yml  pyproject.toml  setup.cfg  setup.py
impala_storage/impala_storage/: conftest.py
rest_client/: Dockerfile  Dockerfile.rest_client  Jenkinsfile.integration  backend-entrypoint.sh  docker-compose-integration.yaml  docker-compose-jenkins.yaml  docker-compose.yaml  jenkins-backend-entrypoint.sh  pyproject.toml  rest-environment.yml  run_resttests.sh  setup.cfg  setup.py  setup_testing_remote.py  versioneer.py
rest_client/conda-recipe/: recipe.yaml
rest_client/integration/: entrypoint.sh  grr_definition.yaml  setup.sh
rest_client/jenkins-jobs/: integration.groovy
rest_client/rest_client/: __init__.py  rest_client.py
rest_client/tests/: conftest.py  mailhog_client.py  mailpit_client.py  test_gpf_oauth2.py  test_rest_client.py  test_rest_client_authenticate.py  test_rest_client_users.py
web/: .gitignore  Dockerfile  Dockerfile.production  mypy.ini  pyproject.toml  setup.cfg
web/conda-recipe/: recipe.yaml
web/gpf_web/: conftest.py
web/scripts/: grr-definition.yaml
(+9079 files in other folders)
