[project]
name = "gpf-monorepo"
version = "0"
description = "GPF monorepo virtual root — uv workspace coordinator"
requires-python = ">=3.12"
# Dependencies a fresh `uv sync` (no --package, no
# --all-packages) installs by default. Limited to the two
# always-needed members; the storage backends and the
# federation/rest_client extensions are workspace members
# but optional, install via
# `uv sync --package gpf-<name> --group dev` (their CI
# Dockerfiles do exactly this) or `uv sync --all-packages`.
dependencies = [
    "gpf-core",
    "gpf-web",
]

[tool.uv]
# Virtual root — no source code to build / install. Without
# this, uv would try to build a wheel for `gpf-monorepo`.
package = false

[tool.uv.workspace]
# gcp_storage, impala_storage and impala2_storage have
# their own pyproject.toml files but are deliberately not
# workspace members — their heavy backend dependencies
# (Google Cloud SDKs, Impala/Hadoop, openjdk) are pulled
# in only when those packages are installed standalone
# (`uv pip install -e ./impala_storage`).
members = [
    "core",
    "web_api",
    "federation",
    "rest_client",
]

[tool.uv.sources]
gpf-core = { workspace = true }
gpf-web = { workspace = true }
gpf-federation = { workspace = true }
gpf-rest-client = { workspace = true }
# gain-core is NOT pinned to a path source here. It is consumed
# as a wheel built by gain's CI. The gpf Jenkinsfile's
# `Fetch gain wheel` stage drops it into dist/gain/, and each CI
# Dockerfile passes that directory as `--find-links` to uv. For
# local development with editable gain — copy
# pyproject.local.toml.template to pyproject.local.toml and
# follow README's "Editable gain for local development" section.

[tool.pytest.ini_options]
# Scope: this root pyproject.toml is the configfile only for pytest runs
# rooted at the repo root — in practice just the docs_e2e suite
# (`pytest docs_e2e/`). The package suites (core/, web_api/, federation/)
# carry their own pytest.ini and resolve their own rootdir, so they are
# unaffected by these options.
#
# A per-test wall under the docs-e2e Jenkins build's 1 h timeout: the
# whole guide chain (conda solve, grr_cache_repo, imports, wgpf boot)
# builds inside the FIRST server-backed test's session-fixture setup, so
# without this a hang there aborts the build at the Jenkins level with no
# JUnit. timeout_method="signal" (NOT "thread") is required because the
# heavy steps are blocking subprocess.run() calls — only SIGALRM (signal,
# main thread, Unix — all true here) can interrupt them; the thread method
# would merely dump stacks while the subprocess ran on to its own timeout.
timeout = 2400
timeout_method = "signal"

[dependency-groups]
# Sphinx toolchain for `docs/build_docs.sh`. Members mirror the
# conda env that gpf_documentation used to ship from. Install
# with `uv sync --group docs`.
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-copybutton",
    "sphinxcontrib-httpdomain",
    "ipython",
    "sphinx-autorun",
    "sphinxcontrib-video",
    "sphinx-last-updated-by-git",
    "jinja2",
]
