[metadata]
license_files = ['LICENSE']

[bdist_wheel]
universal = 1

[flake8]
exclude = old,*tmp*,*temp*,data-hg19*,build,docs,migrations
max-complexity = 15

[versioneer]
VCS = git
style = pep440
versionfile_source = gpf/_version.py
versionfile_build = gpf/_version.py
tag_prefix = ''
parentdir_prefix = ''
