[metadata]
license_files = ['LICENSE']

[bdist_wheel]
universal = 1

[flake8]
exclude = old,*tmp*,*temp*,data-hg19*,build,docs,migrations
max-complexity = 15
inline-quotes=double
docstring-quotes=double
multiline-quotes=double
docstring-convention=pep257
ignore = D100,D101,D102,D103,D104,D105,D106,D107,W503


[versioneer]
VCS = git
style = pep440
versionfile_source = dae/_version.py
versionfile_build = dae/_version.py
tag_prefix = ''
parentdir_prefix = ''
