[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gpf-federation"
description = "GPF Federation — federated query support"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Lubomir Chorbadjiev", email = "lubomir.chorbadjiev@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gpf-core",
    "gpf-rest-client",
    "gpf-web",
    "ijson>=3.2",
    "requests>=2.32",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/IossifovLab/gpf"

[project.entry-points."gpf_web.gpf_instance.extensions"]
remote_extension = "federation.remote_extension:GPFRemoteExtension"

[project.entry-points."federation.tools"]
pheno_tool = "federation.remote_pheno_tool_adapter:RemotePhenoToolAdapter"
enrichment_helper = "federation.remote_enrichment_tool:RemoteEnrichmentHelper"
enrichment_builder = "federation.remote_enrichment_tool:RemoteEnrichmentBuilder"
pheno_browser_helper = "federation.remote_pheno_browser_helper:RemotePhenoBrowserHelper"
common_reports_helper = "federation.remote_common_reports_helper:RemoteCommonReportsHelper"

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "pandas-stubs",
    "pylint",
    "pylint-junit",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-mock",
    "pytest-xdist",
    "ruff==0.15.10",
    "types-requests",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.version.raw-options]
root = ".."
version_scheme = "no-guess-dev"

[tool.hatch.build.targets.wheel]
packages = ["federation"]
exclude = ["federation/tests"]

[tool.hatch.build.targets.sdist]
include = ["/federation"]
exclude = ["federation/tests"]
