[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gpf-rest-client"
description = "GPF REST API client library"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Lubomir Chorbadjiev", email = "lubomir.chorbadjiev@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gpf-core",
    "gpf-web",
    "ijson>=3.2",
    "requests>=2.32",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/IossifovLab/gpf"

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "pylint",
    "pylint-junit",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-mock",
    "pytest-xdist",
    "ruff==0.14.6",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.version.raw-options]
root = ".."
version_scheme = "no-guess-dev"

[tool.hatch.build.targets.wheel]
packages = ["rest_client"]
exclude = ["rest_client/tests"]

[tool.hatch.build.targets.sdist]
include = ["/rest_client"]
exclude = ["rest_client/tests"]
